fix jumbotron overlapping issue

--- a/src/assets/sass/partials/_activitiesPanel.scss
+++ b/src/assets/sass/partials/_activitiesPanel.scss
@@ -32,12 +32,18 @@
             filter: invert(100%);
         }
 
-        &:hover {
-            scale: 1.1;
-        }
+        
     }
 }
 
 .rotate {
     transform: rotate(-45deg);
+}
+
+@media screen and (min-width: 768px) {
+    .activity-card {
+        &:hover {
+            scale: 1.1;
+        }
+    }
 }
