--- a/src/assets/sass/partials/_mailingList.scss
+++ b/src/assets/sass/partials/_mailingList.scss
@@ -18,11 +18,13 @@
 
     input {
         padding: .75rem 1.75rem;
+        width: 100%;
     }
 
     button {
-        padding-left: 5rem;
-        padding-right: 5rem;
+        // padding-left: 5rem;
+        // padding-right: 5rem;
+        width: 100%;
     }
 
     p {
